Закончил первоначальную верстку страниц form.html и photo.html

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,10 +1,14 @@
 .main-nav {
-  /*background-color: #1d2631;*/
-
+  /*background-image:
+    url("../img/iphone-hand-mobile@1x.png"),
+    url("../img/bg-back-mobile@1x.jpg");
+  background-repeat:
+    no-repeat,
+    no-repeat;*/
   outline: 5px solid red;
   font-size: 18px;
   line-height: 32px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
   color: #ffffff;
 }
