--- a/source/less/blocks/prices.less
+++ b/source/less/blocks/prices.less
@@ -16,7 +16,7 @@
 .prices__title {
   font-size: 18px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #283645;
@@ -28,7 +28,7 @@
 .prices__cost {
   font-size: 24px;
   line-height: 30px;
-  font-weight: lighter;
+  font-weight: 300;
   color: #ffffff;
 }
 
