--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,5 @@
-@import "blocks/general";
+@import "scaffolding.less";
+@import "fonts.less";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/download-menu";
@@ -7,3 +8,12 @@
 @import "blocks/reviews";
 @import "blocks/prices";
 @import "blocks/contacts";
+@import "blocks/download-menu";
+@import "blocks/content-proposal";
+@import "blocks/contest-form";
+@import "blocks/form-field";
+@import "blocks/inner-page-intro";
+@import "blocks/users-photos";
+@import "blocks/user-photo";
+@import "blocks/photo-upload";
+@import "blocks/developer";
