--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -4,10 +4,10 @@
   outline: 5px solid indigo;
 }
 
-.contacts__title {
+.contacts__message {
   font-size: 24px;
   line-height: normal;
-  font-weight: lighter;
+  font-weight: 300;
   color: #283645;
 }
 
@@ -18,13 +18,13 @@
 .contacts__title {
   font-size: 18px;
   line-height: normal;
-  font-weight: bold;
+  font-weight: 700;
   color: #283645;
 }
 
 .contacts__description {
   font-size: 24px;
   line-height: normal;
-  font-weight: lighter;
+  font-weight: 300;
   color: #d22856;
 }
