--- a/source/less/blocks/download-menu.less
+++ b/source/less/blocks/download-menu.less
@@ -2,12 +2,17 @@
 
 .download-menu {
   outline: 5px solid green;
-
+  /*background-image:
+    url("../img/iphone-hand-mobile@1x.png"),
+    url("../img/bg-back-mobile@1x.jpg");
+  background-repeat:
+    no-repeat,
+    no-repeat;*/
   min-height: 271px;
   background-color: #1d2631;
   font-size: 14px;
   line-height: 24px;
-  font-weight: lighter;
+  font-weight: 300;
   color: #dfdfe0;
 }
 
@@ -18,6 +23,6 @@
 .download-menu__download-link {
   font-size: 18px;
   line-height: 18px;
-  font-weight: bold;
+  font-weight: 700;
   color: #ffffff;
 }
