--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -13,7 +13,7 @@
   font-size: 18px;
   line-height: 30px;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
 }
 
