Подправил первоначальную верстку

--- a/source/less/blocks/contest-form.less
+++ b/source/less/blocks/contest-form.less
@@ -4,11 +4,11 @@
   outline: 3px solid red;
 }
 
-.contest-form__group:nth-child(2n-1) {
+.contest-form__group:nth-child(odd) {
   background-color: #ffffff;
 }
 
-.contest-form__group:nth-child(2n) {
+.contest-form__group:nth-child(even) {
   background-color: #f2f2f2;
 }
 
