--- a/source/less/blocks/photo-upload.less
+++ b/source/less/blocks/photo-upload.less
@@ -11,14 +11,14 @@
   color: #283645;
 }
 
-.photo-upload__button.photo-upload__button--submit {
+.photo-upload__button--submit {
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
   color: #d22856;
 }
 
-.photo-upload__button.photo-upload__button--reset {
+.photo-upload__button--reset {
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
