--- a/source/less/blocks/form-field.less
+++ b/source/less/blocks/form-field.less
@@ -7,7 +7,7 @@
   color: #d22856;
 }
 
-.form-field .form-field__input-text {
+.form-field__input-text {
   font-size: 18px;
   line-height: 30px;
   color: #283645;
