--- a/source/less/blocks/users-photos.less
+++ b/source/less/blocks/users-photos.less
@@ -1,6 +1,6 @@
 /*блок users-photos*/
 
-.users-photos .users-photos__description {
+.users-photos__description {
   font-size: 14px;
   line-height: 30px;
   color: #283645;
