Добавил флекс сетки, настроил перестройку для страницы index.html

--- a/source/less/blocks/download-menu.less
+++ b/source/less/blocks/download-menu.less
@@ -1,28 +1,61 @@
-/*блок download-menu*/
-
 .download-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 280px;
   outline: 5px solid green;
-  /*background-image:
-    url("../img/iphone-hand-mobile@1x.png"),
-    url("../img/bg-back-mobile@1x.jpg");
-  background-repeat:
-    no-repeat,
-    no-repeat;*/
-  min-height: 271px;
   background-color: #1d2631;
+  min-height: 271px;
   font-size: 14px;
   line-height: 24px;
   font-weight: 300;
   color: #dfdfe0;
 }
 
-.download-menu__platform {
-  list-style: none;
+.download-menu__title {
+  display: none;
+  font-size: 40px;
+  font-weight: 300;
+  color: #ffffff;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .download-menu__download-link {
+  min-width: 280px;
+  min-height: 55px;
   font-size: 18px;
   line-height: 18px;
   font-weight: 700;
   color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
+.download-menu__platform {
+  min-width: 280px;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+
+  outline: 1px solid green;
+}
+
+.download-menu__description {
+  width: 230px;
+  height: auto;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .download-menu {
+    align-items: flex-start;
+  }
+
+  .download-menu__title {
+    display: block;
+    width: 200px;
+  }
 }
