--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,14 +2,14 @@
 
 .page-header {
   background-color: #1d2631;
+  display: flex;
 }
 
 .page-header__logo {
   display: block;
   background-color: rgba(29, 38, 49, 0.3);
-  width: 100%;
   height: 66px;
-  padding: 0 20px;
+  padding-left: 20px;
 }
 
 .page-header__logo-image {
