--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,8 +1,24 @@
 body {
   margin: 0;
   padding: 0;
-  background: #ffffff;
+  min-width: 320px;
+  /*background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-color: #1d2631;*/
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
