--- a/source/less/blocks/prices.less
+++ b/source/less/blocks/prices.less
@@ -3,14 +3,13 @@
 .prices {
   outline: 5px solid tomato;
   background-color: #f2f2f2;
-  padding: 0 20px;
 }
 
 .prices__list {
   border: 2px solid #e5e5e5;
   border-collapse: collapse;
-  width: 280px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .prices__title {
