--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,13 +1,19 @@
-@import "scaffolding.less";
-@import "fonts.less";
+@import "variables";
+@import "scaffolding";
+@import "fonts";
 @import "blocks/page-header";
 @import "blocks/main-nav";
+@import "blocks/page-main";
 @import "blocks/download-menu";
 @import "blocks/proposal-section";
 @import "blocks/features";
 @import "blocks/reviews";
+@import "blocks/reviews-proof";
 @import "blocks/prices";
+@import "blocks/page-footer";
 @import "blocks/contacts";
+@import "blocks/footer-end";
+@import "blocks/social-list";
 @import "blocks/download-menu";
 @import "blocks/content-proposal";
 @import "blocks/contest-form";
