--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,4 @@
 .main-nav {
-  margin-left: auto;
   display: flex;
   flex-direction: row;
   font-size: 18px;
@@ -11,14 +10,12 @@
 
 .main-nav__list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.site-list__item a {
+.main-nav__item a {
   text-decoration: none;
-}
-
-.site-list {
-  display: none;
 }
 
 @media (min-width: @desktop-width) {
@@ -26,13 +23,15 @@
     display: none;
   }
 
-  .site-list {
+  .main-nav {
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 400;
+  }
+
+  .main-nav__list {
     display: flex;
     justify-content: space-between;
     width: 620px;
-  }
-
-  .main-nav {
-    margin-left: 170px;
   }
 }
