--- a/source/less/blocks/proposal-section.less
+++ b/source/less/blocks/proposal-section.less
@@ -8,7 +8,7 @@
   font-size: 24px;
   font-weight: 300;
   color: #283645;
-  line-height: auto;
+  line-height: normal;
 }
 
 @media (min-width: @tablet-width) {
