--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  /*background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-color: #1d2631;*/
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
+  /*background-color: #1d2631;
+*/
+
 }
 
 img {
@@ -14,7 +14,7 @@ img {
   height: auto;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
   height: 1px;
