--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,30 +1,24 @@
 /*блок page-header*/
 
 .page-header {
-  background-color: #1d2631;
+  // background-color: rgba(29, 38, 49, 0.3);
 }
 
-.page-header__wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 320px;
-  margin: 0 auto;
-}
-
-.page-header__logo {
-  display: block;
-  background-color: rgba(29, 38, 49, 0.3);
-  height: 66px;
-}
-
-@media (min-width: @tablet-width) {
-  .page-header__wrapper {
-    width: 660px;
-  }
-}
+// .page-header__wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   }
 
 @media (min-width: @desktop-width) {
   .page-header__wrapper {
     width: 960px;
+    margin: 0 auto;
+  }
+
+  .page-header {
+    min-height: 110px;
+    background-color: rgba(21, 28, 36, 0.3);
   }
 }
+
