--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,14 +1,9 @@
 /*блок page-header*/
 
 .page-header {
-  // background-color: rgba(29, 38, 49, 0.3);
+  position: relative;
+  z-index: 1;
 }
-
-// .page-header__wrapper {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   }
 
 @media (min-width: @desktop-width) {
   .page-header__wrapper {
@@ -21,4 +16,3 @@
     background-color: rgba(21, 28, 36, 0.3);
   }
 }
-
