--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -19,18 +19,16 @@
 .main-nav__logo {
   position: relative;
   display: block;
-  height: 69px;
   padding-left: 20px;
   padding-top: 21px;
-  box-sizing: border-box;
+  padding-bottom: 25px;
   border-top: 1px solid rgba(255, 255, 255, 0.15);
   border-bottom: 1px solid #000000;
-  // background-color: #283645;
 }
 
-.main-nav__list a {
+.main-nav__item {
   display: block;
-  height: 64px;
+  min-height: 64px;
   text-align: center;
   color: #ffffff;
   text-decoration: none;
@@ -54,7 +52,7 @@
 @media (min-width: @tablet-width) {
   .main-nav__logo {
     padding-top: 27px;
-    height: 109px;
+    // height: 109px;
   }
 }
 
@@ -74,7 +72,7 @@
     background-color: transparent;
   }
 
-   .main-nav__logo {
+  .main-nav__logo {
     padding: 0;
     border: none;
     background-color: transparent;
