--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,4 +1,15 @@
 .page-main {
-  display: flex;
-  flex-direction: column;
+  margin-top: -100px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-main {
+    margin-top: -110px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main {
+    margin-top: -110px;
+  }
 }
