--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,12 +1,19 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
-  /*background-color: #1d2631;
-*/
-
 }
 
 img {
