--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "variables";
 @import "scaffolding";
 @import "fonts";
+@import "blocks/container";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/page-main";
