Продолжаю добавлять графику

--- a/source/less/blocks/developer.less
+++ b/source/less/blocks/developer.less
@@ -1,7 +1,11 @@
 /*блок developer*/
 
 .developer {
+  width: 128px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-size: 14px;
-  font-weight: 18px;
+  line-height: 18px;
   color: #283645;
 }
