--- a/source/less/blocks/prices.less
+++ b/source/less/blocks/prices.less
@@ -1,7 +1,16 @@
 /*блок prices*/
 
 .prices {
+  background-color: #fff;
+   background-image: url("../img/bg-triangle-white.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  padding-top: 94px;
+}
+
+.prices__wrapper {
   background-color: #f2f2f2;
+  padding-bottom: 40px;
 }
 
 .prices__list {
