--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,9 +1,27 @@
 /*блок contacts*/
 
 .contacts {
+  min-height: 612px;
+  background-image: url("../img/bg-map-mobile@1x.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.contacts::after {
+  content: "";
+  width: 100%;
+  height: 62px;
+  display: block;
+  background-image: url("../img/bg-triangle-white-footer.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.contacts__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #ffffff;
 }
 
 .contacts__message {
@@ -16,6 +34,7 @@
 }
 
 .contacts__list {
+  margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
@@ -45,6 +64,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .contacts {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+  }
+
   .contacts__message {
     width: 375px;
     font-size: 40px;
@@ -63,6 +86,10 @@
 }
 
 @media (min-width: @desktop-width) {
+   .contacts {
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+  }
+
   .contacts__message {
     width: 470px;
     font-size: 50px;
