--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,17 +1,30 @@
 /*блок features*/
 
 .features {
+  background-color: #fff;
+  background-image: url("../img/bg-triangle-white.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  padding-top: 94px;
+
+}
+
+.features__wrapper {
   background-color: #f2f2f2;
 }
 
-
 .features__list {
+  margin: 0;
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+
 }
+
 
 .features__item {
   width: 280px;
@@ -52,6 +65,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .features__item {
