--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,8 +1,12 @@
-.page-footer {
+.page-footer__menu {
+  margin-top: 27px;
+  margin-bottom: 37px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .page-footer--index {
@@ -10,10 +14,19 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-footer,
   .page-footer--index {
+    display: block;
+  }
+  .page-footer__menu {
     display: flex;
     flex-direction: row;
-    align-items: baseline;
+
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__menu {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
