--- a/source/less/blocks/proposal-section.less
+++ b/source/less/blocks/proposal-section.less
@@ -2,8 +2,9 @@
 блок proposal-section*/
 
 .proposal-section {
-  width: 210px;
-  margin: 0 auto;
+  /*width: 210px;
+  margin: 0 auto;*/
+  min-height: 120px;
   text-align: center;
   font-size: 24px;
   font-weight: 300;
@@ -11,10 +12,13 @@
   line-height: normal;
 }
 
+/*.proposal-section p {
+
+}*/
+
 @media (min-width: @tablet-width) {
   .proposal-section {
     font-size: 40px;
-    width: 620px;
   }
 
   .proposal-section__question {
@@ -31,7 +35,6 @@
 
 @media (min-width: @desktop-width) {
   .proposal-section {
-    width: 820px;
     font-size: 50px;
   }
 
