--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -1,5 +1,42 @@
 .social-list {
+  margin: 0;
+  padding: 0;
+  width: 178px;
   display: flex;
   list-style: none;
   justify-content: space-between;
 }
+
+.social-list__item {
+  width: 50px;
+  height: 50px;
+  display: block;
+  border: 3px solid #e9ebec;
+  border-radius: 50%;
+
+  &--twitter {
+    background-image: url("../img/icon-twitter.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    fill: white;
+    /*width: 18px;
+    height: 14px;*/
+  }
+
+  &--facebook {
+    background-image: url("../img/icon-facebook.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    /*width: 9px;
+    height: 18px;*/
+  }
+
+  &--youtube {
+    background-image: url("../img/icon-youtube.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    /*width: 15px;
+    height: 13px;*/
+  }
+}
+
