--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,7 @@
 @import "blocks/proposal-section";
 @import "blocks/features";
 @import "blocks/reviews";
+@import "blocks/slider-menu";
 @import "blocks/reviews-proof";
 @import "blocks/prices";
 @import "blocks/page-footer";
